# workspace-inspector

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  locate.rs  main.rs  process.rs  shelldon.rs  tmux.rs  types.rs  zellij.rs
src/ides/: mod.rs  xcode.rs
src/terminals/: alacritty.rs  apple_terminal.rs  cmd.rs  ghostty.rs  iterm2.rs  kitty.rs  mod.rs  powershell.rs  wezterm.rs
