[package]
name = "terminal-inspector"
version = "0.1.0"
edition = "2021"
authors = ["John Morrow <johnmorrow@users.noreply.github.com>"]
description = "CLI tool to inspect running terminal emulators and multiplexer sessions on macOS"
license = "MIT"
repository = "https://github.com/johnmorrow/terminal-inspector"
readme = "README.md"
keywords = ["terminal", "tmux", "zellij", "cli", "macos"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
