[package]
name = "workspace-inspector"
version = "0.3.2"
edition = "2021"
authors = ["John Morrow <johnmorrow@users.noreply.github.com>"]
description = "CLI tool to inspect running terminal emulators, multiplexer sessions, and browser tabs"
license = "MIT"
repository = "https://github.com/caladriuslogic/workspace-inspector"
readme = "README.md"
keywords = ["terminal", "tmux", "zellij", "browser", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
